data/derived/comb/progs/unify/prog7508.ml.out
Characters 73-74:
  let fixpoint (f,b) = wwhile (( let f' (b) = ( (f b),(b = (f b)) ) in f' (f,b) ,b ));;
                                                                           ^
Error: This expression has type 'a * 'b -> 'a * 'b
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a * 'b -> 'a * 'b
